Wed28Jun2023
2.1.1.18 LAB:
print("Programming","Essentials","in",sep="***",end="...")
print("Python")
	Programming***Essentials***in...Python



2.1.1.19 LAB
print("    *")
print("   * *")
print("  *   *")
print(" *     *")
print("***   ***")
print("  *   *")
print("  *   *")
print("  *****")
	    *
   * *
  *   *
 *     *
***   ***
  *   *
  *   *
  *****

print("    *\n   * *")
print("  *   *\n *     *")
print("***   ***\n  *   *")
print("  *   *\n  *****")
	    *
   * *
  *   *
 *     *
***   ***
  *   *
  *   *
  *****

print("    *"*2)
print("   * *"*2)
print("  *   *"*2)
print(" *     *"*2)
print("***   ***"*2)
print("  *   *"*2)
print("  *   *"*2)
print("  *****"*2)	    *    *
   * *   * *
  *   *  *   *
 *     * *     *
***   ******   ***
  *   *  *   *
  *   *  *   *
  *****  *****

print("    *  "*2)
print("   * *  "*2)
print("  *   *  "*2)
print(" *     *  "*2)
print("***   ***  "*2)
print("  *   *  "*2)
print("  *   *  "*2)
print("  *****  "*2)	    *      *  
   * *     * *  
  *   *    *   *  
 *     *   *     *  
***   ***  ***   ***  
  *   *    *   *  
  *   *    *   *  
  *****    *****  

print("    *      "*2)
print("   * *     "*2)
print("  *   *    "*2)
print(" *     *   "*2)
print("***   ***  "*2)
print("  *   *    "*2)
print("  *   *    "*2)
print("  *****    "*2)	    *          *      
   * *        * *     
  *   *      *   *    
 *     *    *     *   
***   ***  ***   ***  
  *   *      *   *    
  *   *      *   *    
  *****      *****    

print("    *      "*2)
print("   * *     "*2)
print("  *   *    "*2)
print(" *     *   "*2)
print("***   ***  "*2)
print(  *   *    "*2)
print("  *   *    "*2)
print("  *****    "*2)	File "main.py", line 6
    print(  *   *    "*2)
                ^
SyntaxError: invalid syntax

print("    *      "*2)
print("   * *     "*2)
print("  *   *    "*2)
print(" *     *   "*2)
print(***   ***  "*2)
print)
print(  *   *    "*2)
print("  *****    "*2)	  File "main.py", line 5
    print(***   ***  "*2)
            ^
SyntaxError: invalid syntax

print("    *      "*2)
print("   * *     "*2)
print("  *   *    "*2)
print(" *     *   "*2)
print("***   ***  "*2)
print("  *   *    "*2)
print('  *   *    '*2)
print("  *****    "*2)	    *          *      
   * *        * *     
  *   *      *   *    
 *     *    *     *   
***   ***  ***   ***  
  *   *      *   *    
  *   *      *   *    
  *****      *****    

	


2.2.1.11 LAB
print("I\'m")
print('\""learning\""')
print('"""Python"""')	I'm
""learning""
"""Python"""

print("I\'m","\n",'\""learning\""',"\n",'"""Python"""')	I'm
""learning""
"""Python"""

print("I\'m","\n"'\""learning\""',"\n"'"""Python"""')	I'm 
""learning"" 
"""Python"""



2.2.1.12 (Summary Checker)
"Hello ", "007"	They're both strings/string literals.
"1.5", 2.0, 528, False	The first is a string, the second is a numerical literal (a float), the third is a numerical literal (an integer), and the fourth is a boolean literal.
1011	It's 11, because (2**0) + (2**1) + (2**3) = 11
	


2.3.1.1 (Python as a calculator)
print(2+2)	4
2.3.1.2 (Operators -exponentiation)
print(2 ** 3)
print(2 ** 3.)
print(2. ** 3)
print(2. ** 3.)	8
8.0
8.0
8.0


2.3.1.3 (Operators -multiplication)
print(2 * 3)
print(2 * 3.)
print(2. * 3)
print(2. * 3.)	6
6.0
6.0
6.0

print(6 / 3)
print(6 / 3.)
print(6. / 3)
print(6. / 3.)	2.0
2.0
2.0
2.0


2.3.1.4 (Operators -integer division)
print(6 // 3)
print(6 // 3.)
print(6. // 3)
print(6. // 3.)	2
2.0
2.0
2.0

print(6 // 4)
print(6. // 4)	1
1.0

print(-6 // 4)
print(6. // -4)	-2
-2.0


2.3.1.5 (Operators -modulo)
print(14 % 4)	2
print(12 % 4.5)	3.0


